--- a/winners.html
+++ b/winners.html
@@ -10,7 +10,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/winners_page.css">
+  <link rel="stylesheet" href="css/winners.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,15 +77,28 @@
   
 <div class="main">
     <div class="head">
-        
+        <h3 class="card-title"> Ideathon Results</h3>    
         <div class = "container">
             <div class ="card">
-                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal">
+                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img">
                 <div class="intro">
                     <h1> Kunal Thapliyal</h1>
                     <p> <span> Winner Ideathon</span>- secured 1st positon in Ideathon </p>
                 </div>
-
+            </div>
+            <div class ="card">
+                <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img">
+                <div class="intro">
+                    <h1>Daksh Suryavanshi</h1>
+                    <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
+                </div>
+            </div>
+            <div class ="card">
+                <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img">
+                <div class="intro">
+                    <h1>Anmol Ratan</h1>
+                    <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                </div>
             </div>
         </div>
 
