--- a/winners.html
+++ b/winners.html
@@ -93,10 +93,25 @@
                     <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
                 </div>
             </div>
+            
+            <div class ="card">
+                <img src ="img/Harsh-Pic-3rd-Ideathon150x150.jpeg" alt ="Harsh" class="img">
+                <div class="intro">
+                    <h1>Harsh</h1>
+                    <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                </div>
+            </div>
             <div class ="card">
                 <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img">
                 <div class="intro">
                     <h1>Anmol Ratan</h1>
+                    <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                </div>
+            </div>
+            <div class ="card">
+                <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="Ashutosh" class="img">
+                <div class="intro">
+                    <h1>Ashutosh</h1>
                     <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
                 </div>
             </div>
