--- a/winners.html
+++ b/winners.html
@@ -77,11 +77,13 @@
   
 <div class="main">
     <div class="head">
-        <h3 class="card-title"> Ideathon Results</h3>    
-        <div class = "container">
+        <div class="clearfix"><br></div>
+        <h3 class="card-title"> Ideathon Results</h3>   
+        <div class="clearfix"><br></div>
+        <div class = "container1">
             <h3> 1st Position</h3>
             <div class ="card">
-                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img_p">
+                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img">
                 <div class="intro">
                     <h1> Kunal Thapliyal</h1>
                     
@@ -90,13 +92,13 @@
             </div>
             <h3> 2nd Position</h3>
             <div class ="card">
-                <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img_p">
+                <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img">
                 <div class="intro">
                     <h1>Daksh Suryavanshi</h1>
                     <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
                 </div>
             </div>
-            <h3> 3rd Position</h3>
+            <h3 > 3rd Position</h3>
             <div class ="card">
                 <img src ="img/Harsh-Pic-3rd-Ideathon150x150.jpeg" alt ="Harsh" class="img">
                 <div class="intro">
@@ -105,14 +107,14 @@
                 </div>
             </div>
             <div class ="card">
-                <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img_p">
+                <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img">
                 <div class="intro">
                     <h1>Anmol Ratan</h1>
                     <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
                 </div>
             </div>
             <div class ="card">
-                <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="Ashutosh" class="img_p">
+                <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="Ashutosh" class="img">
                 <div class="intro">
                     <h1>Ashutosh</h1>
                     <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
