--- a/winners.html
+++ b/winners.html
@@ -77,47 +77,50 @@
   
 <div class="main">
     <div class="head">
-        <div class="clearfix"><br></div>
-        <h3 class="card-title"> Ideathon Results</h3>   
-        <div class="clearfix"><br></div>
-        <div class = "container1">
-            <h3> 1st Position</h3>
-            <div class ="card">
-                <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="Kunal Thapliyal" class="img">
-                <div class="intro">
-                    <h1> Kunal Thapliyal</h1>
-                    
-                    <p> <span> Winner Ideathon</span>- secured 1st positon in Ideathon </p>
+        <div class="ideathon_result">
+            <h1 class="card-title"> Ideathon Results</h1>   
+            <div class = "container1">
+                <h2> 1st Position</h2>
+                <div class ="card">
+                    <img src ="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" alt ="" class="img_p">
+                    <div class="intro">
+                        <h3> Kunal Thapliyal</h3>
+                        <p> <span> Winner Ideathon</span>- secured 1st positon in Ideathon </p>
+                    </div>
                 </div>
             </div>
-            <h3> 2nd Position</h3>
-            <div class ="card">
-                <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="Daksh Suryavanshi" class="img">
-                <div class="intro">
-                    <h1>Daksh Suryavanshi</h1>
-                    <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
+            <div class = "container2">
+                <h2> 2nd Position</h2>
+                <div class ="card">
+                    <img src ="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" alt ="" class="img_p">
+                    <div class="intro">
+                        <h3>Daksh Suryavanshi</h3>
+                        <p> <span> Runner up Ideathon</span>- secured 2nd positon in Ideathon </p>
+                    </div>
                 </div>
             </div>
-            <h3 > 3rd Position</h3>
-            <div class ="card">
-                <img src ="img/Harsh-Pic-3rd-Ideathon150x150.jpeg" alt ="Harsh" class="img">
-                <div class="intro">
-                    <h1>Harsh</h1>
-                    <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+            <div class = "container3">
+                <h2 > 3rd Position</h2>
+                <div class ="card">
+                    <img src ="img/Harsh-Pic-3rd-Ideathon150x150.jpeg" alt ="" class="img_p">
+                    <div class="intro">
+                        <h3>Harsh</h3>
+                        <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                    </div>
                 </div>
-            </div>
-            <div class ="card">
-                <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="AnmolRatan" class="img">
-                <div class="intro">
-                    <h1>Anmol Ratan</h1>
-                    <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                <div class ="card">
+                    <img src ="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" alt ="" class="img_p">
+                    <div class="intro">
+                        <h3>Anmol Ratan</h3>
+                        <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                    </div>
                 </div>
-            </div>
-            <div class ="card">
-                <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="Ashutosh" class="img">
-                <div class="intro">
-                    <h1>Ashutosh</h1>
-                    <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                <div class ="card">
+                    <img src ="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" alt ="" class="img_p">
+                    <div class="intro">
+                        <h3>Ashutosh</h3>
+                        <p> <span> Second Runner up Ideathon</span>- secured 3rd positon in Ideathon </p>
+                    </div>
                 </div>
             </div>
         </div>
