--- a/participants.html
+++ b/participants.html
@@ -11,156 +11,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/participants.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        html {
-            font-family: sans-serif;
-            box-sizing: border-box;
-        }
-
-        *,
-        *:before,
-        *:after {
-            box-sizing: inherit;
-        }
-
-        .text-center {
-            text-align: center;
-        }
-
-        .color-white {
-            color: #fff;
-        }
-
-        .box-container {
-            align-items: center;
-            display: flex;
-            justify-content: space-around;
-            padding: 35px 15px;
-            width: 100%;
-        }
-
-        @media screen and (min-width:1380px) {
-            .box-container {
-                flex-direction: row
-            }
-        }
-
-        .box-item {
-            position: relative;
-            width: 400px;
-            margin-bottom: 35px;
-            max-width: 23%;
-        }
-
-        .flip-box {
-            -ms-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            -webkit-transform-style: preserve-3d;
-            perspective: 1000px;
-            -webkit-perspective: 1000px;
-        }
-
-        .flip-box-front,
-        .flip-box-back {
-            background-size: cover;
-            background-position: center;
-            border-radius: 8px;
-            min-height: 300px;
-            -ms-transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
-            transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
-            -webkit-transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-        }
-
-        .flip-box-front {
-            -ms-transform: rotateY(0deg);
-            -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
-            -webkit-transform-style: preserve-3d;
-            -ms-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-        }
-
-        .flip-box:hover .flip-box-front {
-            -ms-transform: rotateY(-180deg);
-            -webkit-transform: rotateY(-180deg);
-            transform: rotateY(-180deg);
-            -webkit-transform-style: preserve-3d;
-            -ms-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-        }
-
-        .flip-box-back {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-
-            -ms-transform: rotateY(180deg);
-            -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
-            -webkit-transform-style: preserve-3d;
-            -ms-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-        }
-
-        .flip-box:hover .flip-box-back {
-            -ms-transform: rotateY(0deg);
-            -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
-            -webkit-transform-style: preserve-3d;
-            -ms-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-        }
-
-        .flip-box .inner {
-            position: absolute;
-            left: 0;
-            width: 100%;
-            padding: 60px;
-            outline: 1px solid transparent;
-            -webkit-perspective: inherit;
-            perspective: inherit;
-            z-index: 2;
-
-            transform: translateY(-50%) translateZ(60px) scale(.94);
-            -webkit-transform: translateY(-50%) translateZ(60px) scale(.94);
-            -ms-transform: translateY(-50%) translateZ(60px) scale(.94);
-            top: 50%;
-        }
-
-        .flip-box-header {
-            font-size: 34px;
-        }
-
-        .flip-box p {
-            font-size: 20px;
-            line-height: 1.5em;
-        }
-
-        .flip-box-img {
-            margin-top: 25px;
-        }
-
-        .flip-box-button {
-            background-color: rgb(109, 203, 224);
-            border: 2px solid #0a0a0a;
-            border-radius: 2px;
-            color: #1a1919;
-            cursor: pointer;
-            font-size: 25px;
-            font-weight: bold;
-            margin-top: 25px;
-            padding: 15px 20px;
-            text-transform: uppercase;
-        }
-    </style>
 
 </head>
 
@@ -294,7 +150,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card1.png');">
                         <div class="inner color-white">
-                         <a href="greenpanther.html"><button class="flip-box-button">Learn More</button></a>   
+                         <!-- <a href="greenpanther.html"><button class="flip-box-button">Learn More</button></a>    -->
                         </div>
                     </div>
                 </div>
@@ -307,7 +163,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card2.png');">
                         <div class="inner color-white">
-                            <a href="unnati.html"><button class="flip-box-button">Learn More</button></a>   
+                            <!-- <a href="unnati.html"><button class="flip-box-button">Learn More</button></a>    -->
                         </div>
                     </div>
                 </div>
@@ -320,7 +176,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card3.png');">
                         <div class="inner color-white">
-                            <a href="krishi.html"><button class="flip-box-button">Learn More</button></a>   
+                            <!-- <a href="krishi.html"><button class="flip-box-button">Learn More</button></a>    -->
                         </div>
                     </div>
                 </div>
@@ -333,7 +189,7 @@
                     <div class="flip-box-back text-center"
                         style="background-image: url('img/newfolder/card4.png');">
                         <div class="inner color-white">
-                            <a href="pragati.html"><button class="flip-box-button">Learn More</button></a>  
+                            <!-- <a href="pragati.html"><button class="flip-box-button">Learn More</button></a>   -->
                         </div>
                     </div>
                 </div>
@@ -341,8 +197,6 @@
         </div>
 
     </div>
-
-
 
 </body>
 <footer class="footer-section">
